PMD workflow follow-ups
### What's done:
 * Specified PMD version

--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -30,6 +30,7 @@ jobs:
           java-version: '17'
       - uses: pmd/pmd-github-action@v2
         with:
+          version: '6.55.0'
           rulesets: 'pmd.xml'
           analyzeModifiedFilesOnly: false
       - name: Upload SARIF file
