--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -21,6 +21,7 @@ jobs:
       pull-requests: write
       statuses: write
       packages: write
+      security-events: write
 
     steps:
       - uses: actions/checkout@v4
